Fixed Bug of Menu Color Didn't Contrast in Dark Mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -287,6 +287,9 @@ body.dark .loader { background-color: rgba(114, 114, 114, 0.61); }
     top: 0;
     right: 0;
 }
+body.dark .toggleNavbar button {
+    color: #FFF;
+}
 .close {
     position: absolute;
     right: 50px;
